# ChangeLog for dev-python/egenix-mx-base
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/egenix-mx-base/ChangeLog,v 1.64 2012/02/13 19:24:34 xarthisius Exp $

  13 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org>
  egenix-mx-base-3.2.1-r1.ebuild:
  ppc64 stable wrt #392749

  01 Feb 2012; Brent Baude <ranger@gentoo.org> egenix-mx-base-3.2.1-r1.ebuild:
  Marking egenix-mx-base-3.2.1-r1 ppc for bug 392749

  01 Jan 2012; Raúl Porcel <armin76@gentoo.org>
  egenix-mx-base-3.2.1-r1.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #392749

  26 Dec 2011; Markus Meier <maekke@gentoo.org> egenix-mx-base-3.2.1-r1.ebuild:
  x86 stable, bug #392749

  24 Dec 2011; Agostino Sarubbo <ago@gentoo.org> egenix-mx-base-3.2.1-r1.ebuild:
  Stable for AMD64, wrt bug #392749

*egenix-mx-base-3.2.1-r1 (24 Dec 2011)

  24 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +egenix-mx-base-3.2.1-r1.ebuild:
  Make build system respect user CFLAGS, bug 394917

*egenix-mx-base-3.2.1 (12 Sep 2011)

  12 Sep 2011; Jesus Rivero <neurogeek@gentoo.org>
  +egenix-mx-base-3.2.1.ebuild:
  Version bump

  05 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  egenix-mx-base-3.1.3.ebuild:
  Restrict Jython ABIs.

  02 Mar 2010; Jeroen Roovers <jer@gentoo.org> egenix-mx-base-3.1.3.ebuild:
  Stable for HPPA (bug #301961).

  21 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  egenix-mx-base-3.1.3.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #301961

  10 Feb 2010; Joseph Jezak <josejx@gentoo.org> egenix-mx-base-3.1.3.ebuild:
  Marked ppc stable for bug #301961.

  07 Feb 2010; Markus Meier <maekke@gentoo.org> egenix-mx-base-3.1.3.ebuild:
  amd64/x86 stable, bug #301961

  23 Jan 2010; Tom Gall <tgall@gentoo.org> egenix-mx-base-3.1.3.ebuild:
  stable on ppc64, bug #301961

*egenix-mx-base-3.1.3 (23 Dec 2009)

  23 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +egenix-mx-base-3.1.3.ebuild: