@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/egenix-mx-base
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/egenix-mx-base/ChangeLog,v 1.64 2012/02/13 19:24:34 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/egenix-mx-base/ChangeLog,v 1.65 2012/02/20 09:59:15 patrick Exp $
+
+  20 Feb 2012; Patrick Lauer <patrick@gentoo.org> egenix-mx-base-3.1.3.ebuild,
+  egenix-mx-base-3.2.1-r1.ebuild, egenix-mx-base-3.2.1.ebuild:
+  Restrict pypy for #403793
 
   13 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org>
   egenix-mx-base-3.2.1-r1.ebuild:
